libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
uint64_t uniffi_cyclops_sdk_fn_constructor_createtemplaterequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_namespace(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_createuserapikeyrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_createuserapikeyrequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createuserapikeyrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_scope(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_cyclopscredentials(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_cyclopscredentials(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopscredentials_new(RustBuffer client_id, RustBuffer client_secret, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_cyclopstokenproviderconfigurationbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_cyclopstokenproviderconfigurationbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopstokenproviderconfigurationbuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_base_url(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_claim_poll_interval_ms(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_claim_poll_limit(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_pool_poll_interval_ms(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_pool_poll_limit(uint64_t ptr, uint32_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_httprequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_httprequestbuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_httprequestbuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_body(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_method_httprequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_headers(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_max_response_bytes(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_method(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_timeout_secs(uint64_t ptr, uint64_t value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_httprequestbuilder_url(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_clone_templatebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_templatebuilder(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_templatebuilder_new(RustCallStatus *_Nonnull out_status

);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_api_version(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_method_templatebuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_kind(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_metadata(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_templatebuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_func_fleet_label_key(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_healthy_pool_display_status(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_pool_display_status(RustBuffer pool, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_cyclops_sdk_fn_func_removed_pool_display_status(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_terminating_pool_display_status(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_func_unknown_pool_display_status(RustCallStatus *_Nonnull out_status

);
void ffi_cyclops_sdk_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u8(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_cyclops_sdk_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i8(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i8(uint64_t handle
);
int8_t ffi_cyclops_sdk_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u16(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_cyclops_sdk_rust_future_complete_u16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i16(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i16(uint64_t handle
);
int16_t ffi_cyclops_sdk_rust_future_complete_i16(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u32(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_cyclops_sdk_rust_future_complete_u32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i32(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i32(uint64_t handle
);
int32_t ffi_cyclops_sdk_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_u64(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_cyclops_sdk_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_i64(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_i64(uint64_t handle
);
int64_t ffi_cyclops_sdk_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_f32(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_f32(uint64_t handle
);
float ffi_cyclops_sdk_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_f64(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_f64(uint64_t handle
);
double ffi_cyclops_sdk_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_cyclops_sdk_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_cyclops_sdk_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_cyclops_sdk_rust_future_cancel_void(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_free_void(uint64_t handle
);
void ffi_cyclops_sdk_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_cyclops_sdk_checksum_func_fleet_label_key(void

);