libs/fleet/sdk-bindings/ts-uniffi-browser/cpp/fleet_sdk_module.rs

    fn uniffi_cyclops_sdk_fn_constructor_createtemplaterequestbuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_name(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_namespace(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_spec(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_createuserapikeyrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_createuserapikeyrequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    );
    fn uniffi_cyclops_sdk_fn_constructor_createuserapikeyrequestbuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_name(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_scope(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_cyclopscredentials(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_cyclopscredentials(handle: u64, status_: &mut u::RustCallStatus);
    fn uniffi_cyclops_sdk_fn_constructor_cyclopscredentials_new(
        client_id: u::RustBuffer,
        client_secret: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_cyclopstokenproviderconfigurationbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_cyclopstokenproviderconfigurationbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    );
    fn uniffi_cyclops_sdk_fn_constructor_cyclopstokenproviderconfigurationbuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_base_url(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_claim_poll_interval_ms(
        ptr: u64,
        value: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_claim_poll_limit(
        ptr: u64,
        value: u32,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_pool_poll_interval_ms(
        ptr: u64,
        value: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_cyclopstokenproviderconfigurationbuilder_pool_poll_limit(
        ptr: u64,
        value: u32,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_httprequestbuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_httprequestbuilder(handle: u64, status_: &mut u::RustCallStatus);
    fn uniffi_cyclops_sdk_fn_constructor_httprequestbuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_httprequestbuilder_body(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_httprequestbuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_httprequestbuilder_headers(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_httprequestbuilder_max_response_bytes(
        ptr: u64,
        value: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_httprequestbuilder_method(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_httprequestbuilder_timeout_secs(
        ptr: u64,
        value: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_httprequestbuilder_url(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_clone_templatebuilder(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_free_templatebuilder(handle: u64, status_: &mut u::RustCallStatus);
    fn uniffi_cyclops_sdk_fn_constructor_templatebuilder_new(
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_templatebuilder_api_version(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_templatebuilder_build(
        ptr: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_method_templatebuilder_kind(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_templatebuilder_metadata(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_method_templatebuilder_spec(
        ptr: u64,
        value: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn uniffi_cyclops_sdk_fn_func_fleet_label_key(status_: &mut u::RustCallStatus)
        -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_func_healthy_pool_display_status(
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_func_pool_display_status(
        pool: u::RustBuffer,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_func_removed_pool_display_status(
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_func_terminating_pool_display_status(
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn uniffi_cyclops_sdk_fn_func_unknown_pool_display_status(
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn ffi_cyclops_sdk_rust_future_poll_u8(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_u8(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_u8(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_u8(handle: u64, status_: &mut u::RustCallStatus) -> u8;
    fn ffi_cyclops_sdk_rust_future_poll_i8(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_i8(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_i8(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_i8(handle: u64, status_: &mut u::RustCallStatus) -> i8;
    fn ffi_cyclops_sdk_rust_future_poll_u16(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_u16(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_u16(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_u16(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u16;
    fn ffi_cyclops_sdk_rust_future_poll_i16(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_i16(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_i16(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_i16(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> i16;
    fn ffi_cyclops_sdk_rust_future_poll_u32(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_u32(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_u32(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_u32(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u32;
    fn ffi_cyclops_sdk_rust_future_poll_i32(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_i32(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_i32(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_i32(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> i32;
    fn ffi_cyclops_sdk_rust_future_poll_u64(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_u64(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_u64(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_u64(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u64;
    fn ffi_cyclops_sdk_rust_future_poll_i64(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_i64(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_i64(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_i64(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> i64;
    fn ffi_cyclops_sdk_rust_future_poll_f32(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_f32(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_f32(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_f32(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> f32;
    fn ffi_cyclops_sdk_rust_future_poll_f64(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_f64(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_f64(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_f64(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> f64;
    fn ffi_cyclops_sdk_rust_future_poll_rust_buffer(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_rust_buffer(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_rust_buffer(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_rust_buffer(
        handle: u64,
        status_: &mut u::RustCallStatus,
    ) -> u::RustBuffer;
    fn ffi_cyclops_sdk_rust_future_poll_void(
        handle: u64,
        callback: rust_future_continuation_callback::FnSig,
        callback_data: u64,
    );
    fn ffi_cyclops_sdk_rust_future_cancel_void(handle: u64);
    fn ffi_cyclops_sdk_rust_future_free_void(handle: u64);
    fn ffi_cyclops_sdk_rust_future_complete_void(handle: u64, status_: &mut u::RustCallStatus);
    fn uniffi_cyclops_sdk_checksum_func_fleet_label_key() -> u16;
